# SpacerCord

./: CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.claude/: settings.local.json
crates/infrarust/: Cargo.toml
crates/infrarust-api/: Cargo.toml
crates/infrarust-api/src/: plugin.rs
crates/infrarust-api/src/events/: mod.rs  spacetimedb.rs
crates/infrarust-api/src/services/: mod.rs  spacetimedb.rs
crates/infrarust-core/: Cargo.toml
crates/infrarust-core/src/: server.rs
crates/infrarust-core/src/forwarding/: secret.rs
crates/infrarust-core/src/plugin/: context.rs  context_factory.rs  manager.rs
crates/infrarust-core/src/provider/docker/: mod.rs
crates/infrarust-core/src/services/: mod.rs  proxy.rs  spacetimedb.rs
crates/infrarust-spacetimedb/: Cargo.toml
crates/infrarust-spacetimedb/src/: lib.rs  log_ring.rs  runtime.rs
crates/infrarust-spacetimedb/src/module_bindings/: adjust_balance_reducer.rs  ensure_player_profile_reducer.rs  mod.rs  player_profile_table.rs  player_profile_type.rs  set_balance_reducer.rs
crates/infrarust-transport/src/: socket.rs
crates/infrarust/src/: main.rs
crates/infrarust_config/src/: proxy.rs
crates/infrarust_config/src/migrate/: convert.rs
crates/infrarust_config/src/types/: mod.rs  spacetimedb.rs
examples/: infrarust.toml
plugins/infrarust-plugin-admin-api/: Cargo.toml
plugins/infrarust-plugin-admin-api/frontend/: package-lock.json
plugins/infrarust-plugin-admin-api/frontend/app/components/layout/: NavRail.vue
plugins/infrarust-plugin-admin-api/frontend/app/composables/: useSpacetimedb.ts  useStdbEventStream.ts  useStdbLogStream.ts
plugins/infrarust-plugin-admin-api/frontend/app/pages/spacetimedb/: console.vue  events.vue  index.vue  reducers.vue  sql.vue  tables.vue
plugins/infrarust-plugin-admin-api/frontend/app/types/: api.ts
plugins/infrarust-plugin-admin-api/src/: error.rs  frontend.rs  lib.rs  router.rs  state.rs
plugins/infrarust-plugin-admin-api/src/handlers/: mod.rs  spacetimedb.rs
plugins/infrarust-plugin-admin-api/src/sse/: handlers.rs  types.rs
stdb-module/: Cargo.toml
stdb-module/src/: lib.rs
