[package]
name = "infrarust-api"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Plugin API for Infrarust, a Minecraft reverse proxy"
keywords = ["minecraft", "proxy", "plugin", "api"]
categories = ["game-development", "network-programming"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
